tests/01-syntax/inv_level.ml.reference
File "inv_level.ml", line 1, characters 27-28:
Failure: "invalid logging level 'X'"
File "inv_level.ml", line 1, characters 0-1:
Error: Preprocessor error
